Fix windows 8 bsod margin on smaller screens

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body#win8 {
   font-family:Segoe UI;
   font-size:12pt;
   text-align:center;
-  margin: 100px 300px 100px 300px;
+  margin: 100px 15% 100px 15%;
 }
 
 #sadface {
